<resources>
    <string name="app_name">Manage Trip</string>
    <string name="Textview1">Trip Name</string>
    <string name="RadioButton1">City break</string>
    <string name="RadioButton2">See side</string>
    <string name="Radiobutton3">Mountains</string>
    <string name="Textview2">Destination</string>
    <string name="Textview3">Trip Type</string>
    <string name="Textview4">Price(eur)</string>
    <string name="Textview5">Start Date</string>
    <string name="Textview6">End Date</string>
    <string name="Button1">DD/MM/YYYY</string>
    <string name="Textview7">Rating</string>
    <string name="Button3">SAVE</string>
    <string name="Button2">DD/MM/YYYY</string>
    <string name="camera_option">Gallery photo</string>
    <string name="select_option">SELECT</string>
    <string name="take_picture">Take Picture</string>
    <string name="Gallery">Gallery</string>
    <string name="Take_photo">Take photo</string>
    <string name="appbar_scrolling_view_behavior">appbehavior</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Aboutus">About Us</string>
    <string name="Favourite">Favourite</string>
    <string name="Contact">Contact</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="accept">Accept T&C</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>

</resources>
